--- a/bibliography.bib
+++ b/bibliography.bib
@@ -378,6 +378,30 @@
   }
 
 
+@article{rtsalgorithm,
+  title       = {A Revision of the {{Trauma Score}}},
+  author      = {Champion, H. R. and Sacco, W. J. and Copes, W. S. and Gann, D. S. and Gennarelli, T. A. and Flanagan, M. E.},
+  year        = {1989},
+  month       = may,
+  journal     = {The Journal of Trauma},
+  volume      = {29},
+  number      = {5},
+  pages       = {623--629},
+  issn        = {0022-5282},
+  doi         = {10.1097/00005373-198905000-00017},
+  langid      = {english},
+  pmid        = {2657085},
+  }
+
+@misc{psalgorithm,
+  title       = {{{TARN}} - {{PS12}} - {{Calculations}}},
+  author      = {{The Trauma Audit and Research Network}}
+  howpublished = {https://www.tarn.ac.uk/Content.aspx?c=1895},
+  urldate     = {2022-11-02},
+}
+
+
+
 
 @online{blank,
   author          = {},
