fixed method more

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -397,7 +397,7 @@
   title       = {{{TARN}} - {{PS12}} - {{Calculations}}},
   author      = {{The Trauma Audit and Research Network}}
   howpublished = {https://www.tarn.ac.uk/Content.aspx?c=1895},
-  urldate     = {2022-11-02},
+  urldate     = {2022-11-02}
 }
 
 
